<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.s188066_mappe3.ShowShoppingList" >

    <item
        android:id="@+id/shop_locator"
        android:icon="@drawable/ic_action_place"
        android:showAsAction="always"
        android:title="@string/locate"/>
    <item
        android:id="@+id/exitApp"
        android:icon="@drawable/ic_action_remove"
        android:showAsAction="always"
        android:title="@string/exitApp"/>
    <item
        android:id="@+id/openBrowser"
        android:icon="@drawable/ic_action_web_site"
        android:showAsAction="ifRoom"
        android:title="@string/openBrowserText"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom"
        android:title="@string/help"/>

</menu>