<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.s188066_mappe3.MainActivity" >

    <TextView
        android:id="@+id/wallTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/wallText"
        android:textColor="#60AFDC"
        android:textSize="21sp" />

    <Spinner
        android:id="@+id/wallSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wallTV"
        android:layout_marginBottom="5dp"
        android:cacheColorHint="@android:color/transparent" />

    <TextView
        android:id="@+id/itemTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wallSpinner"
        android:layout_centerHorizontal="true"
        android:text="@string/thingText"
        android:textColor="#60AFDC"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/itemSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemTV"
        android:layout_marginBottom="5dp"
        android:cacheColorHint="@android:color/transparent" />

    <Button
        android:id="@+id/setChoicesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemSpinner"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:text="@string/setButtonText"
        android:textColor="#FFFFFF" />

</RelativeLayout>