<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/shoppingListIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_action_paste"
            android:background="@drawable/darkbackgroundshape" />

        <ImageView
            android:id="@+id/exitIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_action_remove"
            android:background="@drawable/darkbackgroundshape" />

        <ImageView
            android:id="@+id/locatorIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_action_place"
            android:background="@drawable/darkbackgroundshape" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/shoppingListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/shoppingListHelp" />

        <TextView
            android:id="@+id/exitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/exitHelp" />

        <TextView
            android:id="@+id/messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/locatorHelp" />

    </LinearLayout>

</LinearLayout>